added coauthor last names

--- a/doc/Gus-spec.tex
+++ b/doc/Gus-spec.tex
@@ -249,7 +249,7 @@ Prepared by:
 \par}
 
 {\centering\bfseries\color{black}
-Chandler A, Sasha K, Mike S, John S, Leah W
+Chandler Abraham, Sasha Kopriva, Mike Solomon, John Sandmeyer, Leah Wegner
 \par}
 
 {\centering\bfseries\color{black}
