Colby's name added to readme.

--- a/readme
+++ b/readme
@@ -3,3 +3,6 @@ This is the root directory of the Gus group management tool.
 Manifest:
 
 	doc/	Documentation for this project
+
+Authors:
+	Colby Blair
