Updated master latex use case file.

--- a/doc/GROUP5/usecase_master.tex
+++ b/doc/GROUP5/usecase_master.tex
@@ -11,38 +11,47 @@
  
 \section{System Functions}
  
- \subsection{Add Wiki to Group}
+ \subsection{Create User Account}
  Description of the subsection.
  
  
- \textbf{Actors:} Add actors here \\
+ \textbf{Actors:} New User, Administrator, Server \\
 
  
- \textbf{Goals:} Add goals here \\
+ \textbf{Goals:} To add a new user in the GUS environment. \\
  
  
- \textbf{Preconditions:} Add preconditions here. \\
+ \textbf{Preconditions:} None. \\
  
  
- \textbf{Summary:} Add a summary here. \\
+ \textbf{Summary:} A new user or an administratore navigates to the user 
+			registration page. Either enters the new user 
+			information, and then submit the information. The GUS 
+			environment performs necessary checks, and adds the 
+			user if they pass the checks. \\
  
  
- \textbf{Related use cases:} Add related use cases here. \\
+ \textbf{Related use cases:} New User Information Sent to GUS. \\
  
  
  \textbf{Steps:}
 \begin{enumerate}
-  \item step 1.
-  \item step 2.
-  \item step 3.
-  \item step 4.
+  \item New user / existing administrator fills out user registration form.
+  \item The submit button is pressed.
+  \item New User Information is Sent To GUS.
+  \item Send user a confirmation on receipt of registration.
 \end{enumerate}
    
    
- \textbf{Alternative:} Add alternative content here. \\
+ \textbf{Alternative:} User cancels submission. \\
   
   
- \textbf{Fail:} Add fail content here. \\
+ \textbf{Fail:} User is recycled to user page with correct content 
+			inserted back into form, and an error message is 
+			displayed to indicated the problem (internal, user 
+			error). \\
+
+
 
 
 \end{document}
