--- a/doc/GROUP5/usecase_master.tex
+++ b/doc/GROUP5/usecase_master.tex
@@ -11,7 +11,7 @@
  
 \section{System Functions}
  
- \subsection{Create User Account}
+ \subsection{Submit New User Account}
  Description of the subsection.
  
  
@@ -24,11 +24,11 @@
  \textbf{Preconditions:} None. \\
  
  
- \textbf{Summary:} A new user or an administratore navigates to the user 
-			registration page. Either enters the new user 
-			information, and then submit the information. The GUS 
-			environment performs necessary checks, and adds the 
-			user if they pass the checks. \\
+ \textbf{Summary:} A new user or an administratore navigates to the user
+      registration page. Either enters the new user
+      information, and then submit the information. The GUS
+      environment performs necessary checks, and adds the
+      user if they pass the checks. \\
  
  
  \textbf{Related use cases:} New User Information Sent to GUS. \\
@@ -39,6 +39,10 @@
   \item New user / existing administrator fills out user registration form.
   \item The submit button is pressed.
   \item New User Information is Sent To GUS.
+  \begin{enumerate}
+   \item If user registration by admin is set, send to pending user db queue.
+   \item Otherwise, send to registered users.
+  \end{enumerate}
   \item Send user a confirmation on receipt of registration.
 \end{enumerate}
    
@@ -46,13 +50,59 @@
  \textbf{Alternative:} User cancels submission. \\
   
   
- \textbf{Fail:} User is recycled to user page with correct content 
-			inserted back into form, and an error message is 
-			displayed to indicated the problem (internal, user 
-			error). \\
+ \textbf{Fail:} User is recycled to user page with correct content
+      inserted back into form, and an error message is
+      displayed to indicated the problem (internal, user
+      error). \\
 
 
+ \subsection{New User Information Sent to GUS}
+   Actions for incoming new user data.
+ 
+ \textbf{Actors:} New user / existing administrator,
+                  User Registration Page, Server \\
+
+ 
+ \textbf{Goals:} Evaluate new user information if
+                 necessary, cache the information,
+                 and then submit the user information
+                 to the Server. \\
+ 
+ 
+ \textbf{Preconditions:} Use case Submit New User Account
+                         completed. \\
+ 
+ 
+ \textbf{Summary:} New user information is recieved, and then
+                   cached (in case the database is not reachable).
+                   The cache is then submitted to be saved in the
+                   database. \\
+ 
+ 
+ \textbf{Related use cases:} Submit Cache To Server. \\
+ 
+ 
+ \textbf{Steps:}
+\begin{enumerate}
+  \item Receive new user data.
+  \item Add data to cache data.
+  \item Submit Cache To Server.
+  \begin{itemize}
+   \item If success:
+   \begin{enumerate}
+    \item Clear the cache.
+    \item Go through each account entry, and send notifications to
+          new account marked with the notify flag. Then clear flag.
+   \end{enumerate}
+   \item Else, notify the system administrators of database comm error.
+  \end{itemize}
+\end{enumerate}
+   
+   
+ \textbf{Alternative:} None. \\
+  
+  
+ \textbf{Fail:} If Submit Cache To Server fails. \\
 
 
 \end{document}
-
