--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-This is the root directory of the gus group management tool.
+This is the root directory of the Gus group management tool.
 
 Manifest:
 
