Got the red boxes out using a Wiki books page!

--- a/php/tex/SSDD.tex
+++ b/php/tex/SSDD.tex
@@ -11,6 +11,14 @@
 \usepackage{supertabular}
 \usepackage{hhline}
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks,%
+    citecolor=black,%
+    filecolor=black,%
+    linkcolor=black,%
+    urlcolor=black
+}
+
 \usepackage{layout}
 \usepackage{lscape}
 
